--- a/src/cards/cards.css
+++ b/src/cards/cards.css
@@ -70,3 +70,40 @@
     border: none;
     top: -15%;
 }
+
+@media (max-width: 575px) {
+    .navbar-mobile {
+        width: 100vw;
+        padding: 0;
+        display: flex;
+        flex-wrap: nowrap;
+        min-width: 353px;
+    }
+    
+    .filter-mobile {
+        width: 35%;
+        font-size: smaller;
+    }
+
+    .search-mobile {
+        width: 25% !important;
+        font-size: smaller;
+    }
+
+    .button-search {
+        margin: 0px 0.5rem;
+        border-radius: 50%;
+        padding: 10px 5px;
+        font-size: smaller;
+        width: 50px;
+        height: 50px;
+    }
+
+    .button-filter {
+        font-size: smaller;
+        border-radius: 50%;
+        padding: 5px;
+        width: 50px;
+        height: 50px;
+    }
+}
