design-home and navbar

--- a/src/shared/components/Navigation/Navigation.css
+++ b/src/shared/components/Navigation/Navigation.css
@@ -1,4 +1,4 @@
-.logo {
+/* .logo {
     width: 120px;
     position: relative;
     top: 20px;
@@ -78,4 +78,4 @@ p {
 
 .btn-mode:hover {
     background-color: #15748a !important;
-}
+} */
