--- a/src/people/people.css
+++ b/src/people/people.css
@@ -5,17 +5,12 @@
     font-size: 13px;
     padding: 0;
     font-weight: bold;
-    background-color: #18778c !important;
+    background-color: #5F6F89 !important;
     border: none;
 }
 
 .btn-new-card:hover {
-    background-color: #ca22bb !important;
-}
-
-.cardGap {
-    column-gap: 10px;
-    row-gap: 10px;
+    background-color: #FFB900 !important;
 }
 
 .fixed-bottom-btn {
@@ -25,9 +20,4 @@
     z-index: 1030;
 }
 
-.accordion-button {
-    font-weight: bold;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    font-size: 1.1rem;
-    color: #212529;
-}
+
